panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__join-lines__test_joining_tokens.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/join-lines/test_joining_tokens.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/join-lines/test_joining_tokens.c"
   (declaration external (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @8
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 12>>` @16
                        (string `array<char; 12>` @void "hello world\0"))))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @8
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 12>>` @16
                        (string `array<char; 12>` @void "hello world\0"))))))
         (definition (value~2 `int` @0) (42 `int` @0))
         (return (value~2 `int` @0)))))

----- stderr -----
